--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
           Insert link below, to check <strong>phishing link</strong>.
         </p>
 
-        <form action="/" method="post">
+        <form id="url-form" action="/" method="post">
           <div class="link-input">
             <input
               type="url"
@@ -42,7 +42,7 @@
           </div>
 
           <div class="actions">
-            <button id="submit-btn" name="button" type="submit" class="btn">Scan</button>
+            <button id="submit-btn" name="button" type="submit" class="btn" disabled>Scan</button>
           </div>
         </form>
 
