Add routes and error handler, refactor app

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,18 +8,18 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="{{ url_for('static', filename='/images/favicon.ico') }}"
+      href="{{ url_for('static', filename='images/favicon.ico') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='/css/styles.css') }}"
+      href="{{ url_for('static', filename='css/styles.css') }}"
     />
   </head>
   <body>
     <div class="container">
       <div class="logo-container">
         <img
-          src="{{ url_for('static', filename='/images/uproof.png') }}"
+          src="{{ url_for('static', filename='images/uproof.png') }}"
           id="logo"
           alt="u-proof logo"
         />
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <script src="{{ url_for('static', filename='/js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
   </body>
 </html>
