--- a/templates/index.html
+++ b/templates/index.html
@@ -42,18 +42,22 @@
           </div>
 
           <div class="actions">
-            <button id="submit-btn" name="button" type="submit" class="btn" disabled>Scan</button>
+            <button
+              id="submit-btn"
+              name="button"
+              type="submit"
+              class="btn"
+              disabled
+            >
+              Scan
+            </button>
           </div>
         </form>
 
-        <div id="response-container"></div>
-
         <div class="form-footer">Made with ❤️</div>
-
       </div>
     </div>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
   </body>
 </html>
