--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
       <div class="form-container">
         <p class="lead">
-          Insert link below, to check <strong>phishing link</strong>.
+          Check <i>phishing link</i> with <strong>u-proof</strong> (ML model).
         </p>
 
         <form id="url-form" action="/" method="post">
