--- a/static/css/analysis-style.css
+++ b/static/css/analysis-style.css
@@ -1,5 +1,16 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #f4f4f9;
   margin: 0;
   padding: 0;
@@ -33,7 +44,6 @@ body {
 
 .result-field {
   margin: 33px 0;
-  text-align: center;
 }
 
 .back-home {
@@ -41,25 +51,16 @@ body {
   width: 30px;
   height: 35px;
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 15px;
+  margin: 20px 0px 15px 56px;
   font-size: 24px;
   color: #000065;
   text-decoration: none;
 }
 
-#loading{
+#loading {
   text-align: center;
   font-size: 35px;
   font-weight: bold;
-}
-
-
-.form-footer {
-  text-align: center;
-  margin-top: 30px;
-  font-size: 0.9em;
-  color: #777;
 }
 
 .progress {
@@ -68,7 +69,13 @@ body {
   overflow: hidden;
   position: relative;
   height: 33px;
-  margin: 0px 86px 0px 86px
+  margin: 0px 86px 0px 86px;
+}
+
+.progress-title {
+  margin: 10px 95px 15px 95px;
+  font-size: 27px;
+  font-weight: bold;
 }
 
 .progress-bar {
@@ -83,40 +90,25 @@ body {
   transition: width 0.3s ease-in-out, background-size 0.3s ease-in-out;
 }
 
-/* .progress {
-  margin-top: 10px;
-  width: 100%;
-  background-color: #E9ECEF;
-  border-radius: 10px;
-  overflow: hidden;
-  position: relative;
+#progress-bar-Phishing {
+  background: linear-gradient(90deg, #c5031d, red);
 }
 
-.progress-bar {
-  height: 30px;
-  transition: width 1s;
-  border-radius: 10px;
-  text-align: center;
-  color: white;
-  line-height: 30px;
-} */
-
-#progress-bar-Phishing{
-  background: linear-gradient(90deg, #c5031d,red)
-}
-
-#progress-bar-Legitimate{
+#progress-bar-Legitimate {
   background: linear-gradient(90deg, #4caf50, #81c784);
 }
 
-.progress-title {
-  margin-top: 10px;
-  margin-bottom: 15px;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
+#rf-url {
+  margin: 33px 95px 33px 95px;
+  font-size: 16px;
 }
 
+.form-footer {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 0.9em;
+  color: #777;
+}
 
 @media only screen and (max-width: 600px) {
   .container {
@@ -132,6 +124,10 @@ body {
     #logo {
       width: 100%;
       height: auto;
+    }
+
+    .back-home {
+      margin: 20px 0px 15px 5px;
     }
   }
 }
