--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -18,11 +18,13 @@
   <body>
     <div class="container">
       <div class="logo-container">
-        <img
-          src="{{ url_for('static', filename='images/uproof.png') }}"
-          id="logo"
-          alt="u-proof logo"
-        />
+        <a href="/api/v1">
+          <img
+            src="{{ url_for('static', filename='images/uproof.png') }}"
+            id="logo"
+            alt="u-proof logo"
+          />
+        </a>
       </div>
 
       <a href="/api/v1" class="back-home">❮</a>
